--- a/app/views/create-account/court-details.html
+++ b/app/views/create-account/court-details.html
@@ -1112,10 +1112,10 @@
             text: 'Enter the prosecutor’s reference number or original account number'
           },
           classes: "govuk-input--width-10 govuk-input--extra-letter-spacing",
-          id: "ljaReferenceCode",
-          name: "ljaReferenceCode",
+          id: "pcrReference",
+          name: "pcrReference",
           attributes: { "oninput": "updateCharacterCount()" }, 
-          value: data['ljaReferenceCode']
+          value: data['pcrReference']
         }) }}
         
         <!-- ENFORCEMENT COURT -->
