--- a/app/views/create-account/parent-guardian-details.html
+++ b/app/views/create-account/parent-guardian-details.html
@@ -161,7 +161,6 @@
           },
           id: "PGAddressLine1",
           name: "PGAddressLine1",
-          autocomplete: "address-line1",
           value: data['PGAddressLine1'],
           classes: "govuk-input--width-30"
         }) }}
@@ -173,7 +172,6 @@
           },
           id: "PGAddressLine2",
           name: "PGAddressLine2",
-          autocomplete: "address-line2",
           value: data['PGAddressLine2'],
           classes: "govuk-input--width-30"
         }) }}
@@ -185,7 +183,6 @@
           },
           id: "PGAddressLine3",
           name: "PGAddressLine3",
-          autocomplete: "address-level3",
           value: data['PGAddressLine3'],
           classes: "govuk-input--width-20"
         }) }}
@@ -197,10 +194,9 @@
             classes: "govuk-label"
           },
           classes: "govuk-input--width-10",
-          id: "PGAddressLine4",
-          name: "PGAddressLine4",
-          autocomplete: "postal-code",
-          value: data['PGAddressLine4']
+          id: "PGAddressPostcode",
+          name: "PGAddressPostcode",
+          value: data['PGAddressPostcode']
         }) }}
 
       {% endcall %}
