--- a/app/views/create-account/personal-details.html
+++ b/app/views/create-account/personal-details.html
@@ -22,6 +22,7 @@
         {{ govukSelect({
           id: "title",
           name: "title",
+          value: data['title'],
           label: {
             text: "Title",
             classes: "govuk-label--s"
