--- a/app/views/create-account/create-account.html
+++ b/app/views/create-account/create-account.html
@@ -34,6 +34,7 @@
           items: [
             { text: "Avon and Somerset" },
             { text: "Bath" },
+            { text: "Plymouth" },
             { text: "Poole" },
             { text: "Port Talbot" }
           ]
