--- a/app/views/create-account/offence-imposition/check-offences.html
+++ b/app/views/create-account/offence-imposition/check-offences.html
@@ -23,7 +23,7 @@
 
     <!-- DATE OF SENTENCE -->
     <div style="background-color: #1d70b8;" class="govuk-!-padding-2 govuk-!-margin-bottom-4">
-      <span class="govuk-body-s govuk-!-margin-right-2 govuk-!-font-weight-bold" style="color: white;">Date of sentence</span><span class="govuk-body-s" style="color: white;">{{ data['Offence1_Date_Of_Sentence'] or "23 June 2024"}}</span>
+      <span class="govuk-body-s govuk-!-margin-right-2 govuk-!-font-weight-bold" style="color: white;">Date of sentence</span><span class="govuk-body-s" style="color: white;">{{ data['Offence1_Date_Of_Sentence'] | formatDate | govukDate }}</span>
     </div>
 
     <!-- OFFENCE HEADING -->
@@ -259,7 +259,7 @@
      
     <!-- DATE OF SENTENCE -->
     <div style="background-color: #1d70b8;" class="govuk-!-padding-2 govuk-!-margin-bottom-4">
-      <span class="govuk-body-s govuk-!-margin-right-2 govuk-!-font-weight-bold" style="color: white;">Date of sentence</span><span class="govuk-body-s" style="color: white;">{{ data['Offence2_Date_Of_Sentence'] or "7 April 2024" }}</span>
+      <span class="govuk-body-s govuk-!-margin-right-2 govuk-!-font-weight-bold" style="color: white;">Date of sentence</span><span class="govuk-body-s" style="color: white;">{{ data['Offence2_Date_Of_Sentence'] | formatDate | govukDate }}</span>
     </div>
 
     <!-- OFFENCE HEADING -->
@@ -492,7 +492,7 @@
      
     <!-- DATE OF SENTENCE -->
     <div style="background-color: #1d70b8;" class="govuk-!-padding-2 govuk-!-margin-bottom-4">
-      <span class="govuk-body-s govuk-!-margin-right-2 govuk-!-font-weight-bold" style="color: white;">Date of sentence</span><span class="govuk-body-s" style="color: white;">{{ data['Offence3_Date_Of_Sentence'] or "24 March 2024" }}</span>
+      <span class="govuk-body-s govuk-!-margin-right-2 govuk-!-font-weight-bold" style="color: white;">Date of sentence</span><span class="govuk-body-s" style="color: white;">{{ data['Offence3_Date_Of_Sentence'] | formatDate | govukDate  }}</span>
     </div>
 
     <!-- OFFENCE HEADING -->
@@ -721,7 +721,7 @@
     </div>
     {% endif %}
 
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible govuk-!-margin-top-2">
 
     {% if data['Offence3-Added'] == "True" %}
     <button type="submit" class="govuk-button govuk-button--secondary" formaction="#" style="display: block;">
