Fundamental journey complete

--- a/app/views/create-account/confirmation.html
+++ b/app/views/create-account/confirmation.html
@@ -24,7 +24,7 @@
 
     <h2 class="govuk-heading-m">Next steps</h2>
     <p class="govuk-body"><a class="govuk-link--no-visited-state" href="/clear-session" id="clear-storage-link">Create a new account</a></p>
-    <p class="govuk-body"><a class="govuk-link--no-visited-state" href="#">See all accounts in review</a></p>
+    <p class="govuk-body" data-module="edge"><a class="govuk-link--no-visited-state" href="#">See all accounts in review</a></p>
 
 
   </div>
