--- a/app/views/create-account/offence-imposition/offence-2/add-offence-2.html
+++ b/app/views/create-account/offence-imposition/offence-2/add-offence-2.html
@@ -219,6 +219,7 @@
           { text: "Iceland Stores (ICE1)" },
           { text: "Insolvency Service (INSS)" },
           { text: "John Lewis Stores (JLEW)" },
+          { text: "PCC for Devon & Cornwall (PO50)" },
           { text: "Lidl Stores (LIDL)" },
           { text: "London North Eastern Railway (LNER)" },
           { text: "Merseyrail Electrics 2002 Ltd (METV)" },
@@ -455,7 +456,8 @@
           { text: "Huntingdon District Council (HUDC)" },
           { text: "Iceland Stores (ICE1)" },
           { text: "Insolvency Service (INSS)" },
-          { text: "John Lewis Stores (JLEW)" },
+          { text: "John Lewis Stores (JLEW)" }, 
+          { text: "PCC for Devon & Cornwall (PO50)" },
           { text: "Lidl Stores (LIDL)" },
           { text: "London North Eastern Railway (LNER)" },
           { text: "Merseyrail Electrics 2002 Ltd (METV)" },
@@ -701,6 +703,7 @@
           { text: "Iceland Stores (ICE1)" },
           { text: "Insolvency Service (INSS)" },
           { text: "John Lewis Stores (JLEW)" },
+          { text: "PCC for Devon & Cornwall (PO50)" },
           { text: "Lidl Stores (LIDL)" },
           { text: "London North Eastern Railway (LNER)" },
           { text: "Merseyrail Electrics 2002 Ltd (METV)" },
