--- a/app/views/create-account/payment-details.html
+++ b/app/views/create-account/payment-details.html
@@ -22,6 +22,9 @@
           {% set collectionOrderDate %}
           <div class="govuk-form-group">
             <label class="govuk-label govuk-label--s" for="collection-order-date">Date of collection order</label>
+            <div class="govuk-hint">
+              For example, 31/01/2023
+            </div>
             <div class="govuk-input__wrapper">
               <input class="govuk-input moj-js-datepicker-input govuk-input--width-10" id="collection-order-date" name="collection-order-date" type="text" autocomplete="off" value="{{data['collection-order-date']}}">
               <button class="moj-datepicker-toggle moj-js-datepicker-toggle" type="button" aria-haspopup="dialog" aria-controls="datepicker-date" aria-expanded="false">
