major error fixed with offences

--- a/app/views/create-account/check-submit.html
+++ b/app/views/create-account/check-submit.html
@@ -920,25 +920,25 @@
           <div style="width: fit-content;">
             <span class="govuk-caption-m govuk-!-font-weight-regular">{{ (data['Offence1_Code'] or "TP11003") | upper }}</span>
             <h2 class="govuk-heading-s govuk-!-margin-bottom-0">
-              {% if data['Offence1_Code'] == "RR84205" %}
+              {% if (data['Offence1_Code'] | upper) == "RR84205" %}
                 Speeding – exceed limit for type of vehicle (not goods/passenger vehicle) – manned equipment
-              {% elseif data['Offence1_Code'] == "PH97003" %}
+              {% elseif (data['Offence1_Code'] | upper) == "PH97003" %}
                 Harassment – breach of a restraining order on conviction
-              {% elseif data['Offence1_Code'] == "CD71039" %}
+              {% elseif (data['Offence1_Code'] | upper) == "CD71039" %}
                 Criminal Damage to property valued under £5000.00
-              {% elseif data['Offence1_Code'] == "TH68010" %}
+              {% elseif (data['Offence1_Code'] | upper) == "TH68010" %}
                 Theft from a shop
-              {% elseif data['Offence1_Code'] == "RT88567" %}
+              {% elseif (data['Offence1_Code'] | upper) == "RT88567" %}
                 Fail to give information relating to the identification of the driver/rider of a vehicle when required
-              {% elseif data['Offence1_Code'] == "CJ88116" %}
+              {% elseif (data['Offence1_Code'] | upper) == "CJ88116" %}
                 Assault by beating of an emergency worker
-              {% elseif data['Offence1_Code'] == "TH68050" %}
+              {% elseif (data['Offence1_Code'] | upper) == "TH68050" %}
                 Take a motor vehicle without the owners consent
-              {% elseif data['Offence1_Code'] == "TH68036" %}
+              {% elseif (data['Offence1_Code'] | upper) == "TH68036" %}
                 Burglary dwelling and theft – no violence
-              {% elseif data['Offence1_Code'] == "TH68045" %}
+              {% elseif (data['Offence1_Code'] | upper) == "TH68045" %}
                 Aggravated Burglary – dwelling
-              {% elseif data['Offence1_Code'] == "OF61017" %}
+              {% elseif (data['Offence1_Code'] | upper) == "OF61017" %}
                 Section 18 - Grievous Bodily Harm with Intent
               {% else %}
                 Do an act to scare / deter trout / salmon
@@ -1153,25 +1153,25 @@
           <div style="width: fit-content;">
             <span class="govuk-caption-m govuk-!-font-weight-regular">{{ (data['Offence2_Code'] or "TP11003") | upper }}</span>
             <h2 class="govuk-heading-s govuk-!-margin-bottom-0">
-              {% if data['Offence2_Code'] == "RR84205" %}
+              {% if (data['Offence2_Code'] | upper) == "RR84205" %}
                 Speeding – exceed limit for type of vehicle (not goods/passenger vehicle) – manned equipment
-              {% elseif data['Offence2_Code'] == "PH97003" %}
+              {% elseif (data['Offence2_Code'] | upper) == "PH97003" %}
                 Harassment – breach of a restraining order on conviction
-              {% elseif data['Offence2_Code'] == "CD71039" %}
+              {% elseif (data['Offence2_Code'] | upper) == "CD71039" %}
                 Criminal Damage to property valued under £5000.00
-              {% elseif data['Offence2_Code'] == "TH68010" %}
+              {% elseif (data['Offence2_Code'] | upper) == "TH68010" %}
                 Theft from a shop
-              {% elseif data['Offence2_Code'] == "RT88567" %}
+              {% elseif (data['Offence2_Code'] | upper) == "RT88567" %}
                 Fail to give information relating to the identification of the driver/rider of a vehicle when required
-              {% elseif data['Offence2_Code'] == "CJ88116" %}
+              {% elseif (data['Offence2_Code'] | upper) == "CJ88116" %}
                 Assault by beating of an emergency worker
-              {% elseif data['Offence2_Code'] == "TH68050" %}
+              {% elseif (data['Offence2_Code'] | upper) == "TH68050" %}
                 Take a motor vehicle without the owners consent
-              {% elseif data['Offence2_Code'] == "TH68036" %}
+              {% elseif (data['Offence2_Code'] | upper) == "TH68036" %}
                 Burglary dwelling and theft – no violence
-              {% elseif data['Offence2_Code'] == "TH68045" %}
+              {% elseif (data['Offence2_Code'] | upper) == "TH68045" %}
                 Aggravated Burglary – dwelling
-              {% elseif data['Offence2_Code'] == "OF61017" %}
+              {% elseif (data['Offence2_Code'] | upper) == "OF61017" %}
                 Section 18 - Grievous Bodily Harm with Intent
               {% else %}
                 Do an act to scare / deter trout / salmon
@@ -1383,25 +1383,25 @@
           <div style="width: fit-content;">
             <span class="govuk-caption-m govuk-!-font-weight-regular">{{ (data['Offence3_Code'] or "TP11003") | upper }}</span>
             <h2 class="govuk-heading-s govuk-!-margin-bottom-0">
-              {% if data['Offence3_Code'] == "RR84205" %}
+              {% if (data['Offence3_Code'] | upper) == "RR84205" %}
                 Speeding – exceed limit for type of vehicle (not goods/passenger vehicle) – manned equipment
-              {% elseif data['Offence3_Code'] == "PH97003" %}
+              {% elseif (data['Offence3_Code'] | upper) == "PH97003" %}
                 Harassment – breach of a restraining order on conviction
-              {% elseif data['Offence3_Code'] == "CD71039" %}
+              {% elseif (data['Offence3_Code'] | upper) == "CD71039" %}
                 Criminal Damage to property valued under £5000.00
-              {% elseif data['Offence3_Code'] == "TH68010" %}
+              {% elseif (data['Offence3_Code'] | upper) == "TH68010" %}
                 Theft from a shop
-              {% elseif data['Offence3_Code'] == "RT88567" %}
+              {% elseif (data['Offence3_Code'] | upper) == "RT88567" %}
                 Fail to give information relating to the identification of the driver/rider of a vehicle when required
-              {% elseif data['Offence3_Code'] == "CJ88116" %}
+              {% elseif (data['Offence3_Code'] | upper) == "CJ88116" %}
                 Assault by beating of an emergency worker
-              {% elseif data['Offence3_Code'] == "TH68050" %}
+              {% elseif (data['Offence3_Code'] | upper) == "TH68050" %}
                 Take a motor vehicle without the owners consent
-              {% elseif data['Offence3_Code'] == "TH68036" %}
+              {% elseif (data['Offence3_Code'] | upper) == "TH68036" %}
                 Burglary dwelling and theft – no violence
-              {% elseif data['Offence3_Code'] == "TH68045" %}
+              {% elseif (data['Offence3_Code'] | upper) == "TH68045" %}
                 Aggravated Burglary – dwelling
-              {% elseif data['Offence3_Code'] == "OF61017" %}
+              {% elseif (data['Offence3_Code'] | upper) == "OF61017" %}
                 Section 18 - Grievous Bodily Harm with Intent
               {% else %}
                 Do an act to scare / deter trout / salmon
