--- a/app/views/create-account/offence-imposition/offence-1/add-offence-1.html
+++ b/app/views/create-account/offence-imposition/offence-1/add-offence-1.html
@@ -816,7 +816,7 @@
       <button type="submit" class="govuk-button">
         Review offence
       </button>
-      <button type="submit" class="govuk-button govuk-button--secondary" formaction="../offence-2/add-offence-2">
+      <button type="submit" class="govuk-button govuk-button--secondary" formaction="../offence-2/add-offence-2?Offence1-Added=True">
         Add another offence
       </button>
     </div>
