--- a/app/views/create-account/playground.html
+++ b/app/views/create-account/playground.html
@@ -1,63 +1,47 @@
-{% extends "layouts/main.html" %}
+{% if data['Offence1_Code'] == "RR84205" %}
+Speeding – exceed limit for type of vehicle (not goods/passenger vehicle) – manned equipment
+{% elseif data['Offence1_Code'] == "PH97003" %}
+Harassment – breach of a restraining order on conviction
+{% elseif data['Offence1_Code'] == "CD71039" %}
+Criminal Damage to property valued under £5000.00
+{% elseif data['Offence1_Code'] == "TH68010" %}
+Theft from a shop
+{% elseif data['Offence1_Code'] == "RT88567" %}
+Fail to give information relating to the identification of the driver/rider of a vehicle when required
+{% elseif data['Offence1_Code'] == "CJ88116" %}
+Assault by beating of an emergency worker
+{% elseif data['Offence1_Code'] == "TH68050" %}
+Take a motor vehicle without the owners consent
+{% elseif data['Offence1_Code'] == "TH68036" %}
+Burglary dwelling and theft – no violence
+{% elseif data['Offence1_Code'] == "TH68045" %}
+Aggravated Burglary – dwelling
+{% elseif data['Offence1_Code'] == "OF61017" %}
+Section 18 - Grievous Bodily Harm with Intent
+{% else %}
+Do an act to scare / deter trout / salmon
+{% endif %}
 
-{% set pageName = "Test" %}
-
-{% block pageTitle %}
-{{ pageName }} – {{ serviceName }} – GOV.UK Prototype Kit
-{% endblock %}
-
-{% block beforeContent %}
-
-{% endblock %}
-
-{% block content %}
-
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-
-    <h1 class="govuk-heading-l">
-        {{ pageName }}
-    </h1>
-
-    <form id="dobForm" action="playground-2" method="post">
-        {{ govukInput({
-            id: "dateOfBirth",
-            name: "dateOfBirth",
-            value: "",
-            label: {
-                text: "Date of birth",
-                classes: "govuk-label--m"
-            },
-            hint: {
-                text: "Enter in the format DD/MM/YYYY"
-            }
-        }) }}
-
-        <input type="hidden" id="convertedDateOfBirth" name="convertedDateOfBirth" value="{{ data['convertedDateOfBirth'] }}">
-
-        <button type="submit" class="govuk-button">Submit</button>
-    </form>
-
-  </div>
-</div>
-
-<script>
-    document.getElementById('dobForm').addEventListener('submit', function(event) {
-        event.preventDefault();
-        var inputDate = document.getElementById('dateOfBirth').value;
-        var parts = inputDate.split('/');
-        if (parts.length === 3) {
-            var formattedDate = parts[2] + '-' + parts[1] + '-' + parts[0];
-
-            // Store the formatted date in local storage
-            localStorage.setItem('convertedDateOfBirth', formattedDate);
-
-            // Submit the form
-            window.location.href = 'playground-2.html';
-        } else {
-            alert("Please enter a valid date in DD/MM/YYYY format.");
-        }
-    });
-</script>
-
-{% endblock %}
+{% if (data['Offence1_Code'] | upper ) == "RR84205" %}
+Speeding – exceed limit for type of vehicle (not goods/passenger vehicle) – manned equipment
+{% elseif (data['Offence1_Code'] | upper) == "PH97003" %}
+Harassment – breach of a restraining order on conviction
+{% elseif data['Offence1_Code'] == "CD71039" %}
+Criminal Damage to property valued under £5000.00
+{% elseif data['Offence1_Code'] == "TH68010" %}
+Theft from a shop
+{% elseif data['Offence1_Code'] == "RT88567" %}
+Fail to give information relating to the identification of the driver/rider of a vehicle when required
+{% elseif data['Offence1_Code'] == "CJ88116" %}
+Assault by beating of an emergency worker
+{% elseif data['Offence1_Code'] == "TH68050" %}
+Take a motor vehicle without the owners consent
+{% elseif data['Offence1_Code'] == "TH68036" %}
+Burglary dwelling and theft – no violence
+{% elseif data['Offence1_Code'] == "TH68045" %}
+Aggravated Burglary – dwelling
+{% elseif data['Offence1_Code'] == "OF61017" %}
+Section 18 - Grievous Bodily Harm with Intent
+{% else %}
+Do an act to scare / deter trout / salmon
+{% endif %}
