--- a/app/views/create-account/offence-imposition/offence-2/add-offence-2.html
+++ b/app/views/create-account/offence-imposition/offence-2/add-offence-2.html
@@ -816,7 +816,7 @@
       <button type="submit" class="govuk-button">
         Review offence
       </button>
-      <button type="submit" class="govuk-button govuk-button--secondary" formaction="../offence-3/add-offence-3Offence2-Added=True">
+      <button type="submit" class="govuk-button govuk-button--secondary" formaction="../offence-3/add-offence-3?Offence2-Added=True">
         Add another offence
       </button>
     </div>
