--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,56 +1,27 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName = "Opal prototype" %}
+{% set pageName = "Prototype" %}
 
 {% block content %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
+      
+      {{ govukButton({
+        text: "Start",
+        href: "./create-account/create-account.html"
+      }) }}
 
-      <p class="govuk-body" data-module="edge"><a href="./create-account/create-account.html" class="govuk-link--no-visited-state" data-message="This part of the prototype has not been built.">Create fine account</a></p>
+      <!-- <p class="govuk-body" data-module="edge"><a href="./create-account/create-account.html" class="govuk-link--no-visited-state" data-message="This part of the prototype has not been built.">Create fine account</a></p> -->
       <!-- <p class="govuk-body"><a href="./create-account/index.html" class="govuk-link--no-visited-state">Check and input accounts</a></p>
       <p class="govuk-body"><a href="./search/search.html" class="govuk-link--no-visited-state">Search for an account</a></p> -->
 
       
       
-      <h2 class="govuk-heading-m">Progress for in-person testing</h2>
-      <p class="govuk-body govuk-!-margin-bottom-2" style="display: flex; align-items: center;">
-        <img src="/public/images/tick-mark.svg" class="govuk-!-margin-right-2" alt="complete" style="height: 25px; width: 25px;"/>
-        Start page
-      </p>
-      <p class="govuk-body govuk-!-margin-bottom-2" style="display: flex; align-items: center;">
-        <img src="/public/images/tick-mark.svg" class="govuk-!-margin-right-2" alt="complete" style="height: 25px; width: 25px;"/>
-        Court details
-      </p>
-      <p class="govuk-body govuk-!-margin-bottom-2" style="display: flex; align-items: center;">
-        <img src="/public/images/tick-mark.svg" class="govuk-!-margin-right-2" alt="complete" style="height: 25px; width: 25px;"/>
-        Defendant details
-      </p>
-      <p class="govuk-body govuk-!-margin-bottom-2" style="display: flex; align-items: center;">
-        <img src="/public/images/tick-mark.svg" class="govuk-!-margin-right-2" alt="complete" style="height: 25px; width: 25px;"/>
-        Parent or guardian details
-      </p>
-      <p class="govuk-body govuk-!-margin-bottom-2" style="display: flex; align-items: center;">
-        <img src="/public/images/tick-mark.svg" class="govuk-!-margin-right-2" alt="complete" style="height: 25px; width: 25px;"/>
-        Company details
-      </p>
-      <p class="govuk-body govuk-!-margin-bottom-2" style="display: flex; align-items: center;">
-        <img src="/public/images/tick-mark.svg" class="govuk-!-margin-right-2" alt="complete" style="height: 25px; width: 25px;"/>
-        Offence and imposition details
-      </p>
-      <p class="govuk-body govuk-!-margin-bottom-2" style="display: flex; align-items: center;">
-        <img src="/public/images/tick-mark.svg" class="govuk-!-margin-right-2" alt="complete" style="height: 25px; width: 25px;"/>
-        Payment terms
-      </p>
-      <p class="govuk-body govuk-!-margin-bottom-2" style="display: flex; align-items: center;">
-        <img src="/public/images/tick-mark.svg" class="govuk-!-margin-right-2" alt="complete" style="height: 25px; width: 25px;"/>
-        Add account note
-      </p>
-      <p class="govuk-body govuk-!-margin-bottom-2" style="display: flex; align-items: center;">
-        <img src="/public/images/tick-mark.svg" class="govuk-!-margin-right-2" alt="complete" style="height: 25px; width: 25px;"/>
-        Check and submit account
-      </p>
+      <!-- <h2 class="govuk-heading-m">What to expect</h2> -->
+      
+      
 
     </div>
   </div>
