--- a/app/assets/sass/settings.scss
+++ b/app/assets/sass/settings.scss
@@ -12,3 +12,7 @@ $govuk-page-width: 1280px;
 // .moj-header__container {
 //     max-width: 1280px;
 // }
+
+body {
+    border: 10px solid #ffdd00;
+}
