--- a/app/views/create-account/check-submit.html
+++ b/app/views/create-account/check-submit.html
@@ -2398,19 +2398,19 @@
         }
       } else {
         if (conditionalQuestionCollo) {
-          conditionalQuestionCollo.style.display = 'contents';
+          conditionalQuestionCollo.style.display = 'table-row';
         }
         if (conditionalQuestionCollo2) {
-          conditionalQuestionCollo2.style.display = 'contents';
+          conditionalQuestionCollo2.style.display = 'table-row';
         }
         if (conditionalQuestionDaysInDefault) {
-          conditionalQuestionDaysInDefault.style.display = 'contents';
+          conditionalQuestionDaysInDefault.style.display = 'table-row';
         }
         if (conditionalQuestionDaysInDefault2) {
-          conditionalQuestionDaysInDefault.style.display = 'contents';
+          conditionalQuestionDaysInDefault.style.display = 'table-row';
         }
         if (conditionalQuestionDaysInDefault3) {
-          conditionalQuestionDaysInDefault.style.display = 'contents';
+          conditionalQuestionDaysInDefault.style.display = 'table-row';
         }
       }
     }
