--- a/app/views/create-account/company-details.html
+++ b/app/views/create-account/company-details.html
@@ -148,7 +148,7 @@
 
         {{ govukInput({
           label: {
-            text: "Make of the car",
+            text: "Make and model",
             classes: "govuk-label--s"
           },
           id: "carMake",
