--- a/app/views/create-account/create-account.html
+++ b/app/views/create-account/create-account.html
@@ -33,10 +33,9 @@
           },
           items: [
             { text: "Avon and Somerset" },
-            { text: "Bath" },
-            { text: "Plymouth" },
-            { text: "Poole" },
-            { text: "Port Talbot" }
+            { text: "Dorset" },
+            { text: "Devon and Cornwall" },
+            { text: "South Wales" }
           ]
         }) }}
 
