--- a/app/views/create-account/parent-guardian-details.html
+++ b/app/views/create-account/parent-guardian-details.html
@@ -209,7 +209,7 @@
 
         {{ govukInput({
           label: {
-            text: "Make of the car",
+            text: "Make and model",
             classes: "govuk-label--s"
           },
           id: "carMake",
