--- a/app/views/create-account/personal-details.html
+++ b/app/views/create-account/personal-details.html
@@ -251,7 +251,7 @@
 
         {{ govukInput({
           label: {
-            text: "Make of the car",
+            text: "Make and model",
             classes: "govuk-label--s"
           },
           id: "carMake",
