--- a/app/views/create-account/check-submit.html
+++ b/app/views/create-account/check-submit.html
@@ -94,7 +94,7 @@
               {{data['defendantTypeF']}}
             </dd>
           </div>
-          {% if data['businessUnit'] == "Port Talbot" %}
+          {% if data['businessUnit'] == "South Wales" %}
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Document language
