--- a/app/views/create-account/parent-guardian-details.html
+++ b/app/views/create-account/parent-guardian-details.html
@@ -139,7 +139,7 @@
           spellcheck: false,
           value: data['PGNationalInsuranceNumber'],
           hint: {
-            text: "For example, ‘QQ 12 34 56 C’"
+            text: "For example, ‘QQ123456C’"
           }
         }) }}
         </div>
