--- a/app/views/create-account/account-details.html
+++ b/app/views/create-account/account-details.html
@@ -64,7 +64,7 @@
               }
             ]
           }   
-        } if data['businessUnit'] == "Port Talbot",
+        } if data['businessUnit'] == "South Wales",
         {
           key: {
             text: "Court hearing language"
@@ -82,7 +82,7 @@
               }
             ]
           }   
-        } if data['businessUnit'] == "Port Talbot"        
+        } if data['businessUnit'] == "South Wales"        
       ]
     }) }}
     </div>
