--- a/app/views/create-account/personal-details.html
+++ b/app/views/create-account/personal-details.html
@@ -177,7 +177,7 @@
           spellcheck: false,
           value: data['defendantNationalInsuranceNumber'],
           hint: {
-            text: "For example, ‘QQ 12 34 56 C’"
+            text: "For example, ‘QQ123456C’"
           }
         }) }}
         </div>
