--- a/app/views/create-account/offence-imposition/offence-2/add-offence-2.html
+++ b/app/views/create-account/offence-imposition/offence-2/add-offence-2.html
@@ -888,6 +888,9 @@
       case 'TH68010':
           offenceTitleDisplay.textContent = "Theft from a shop";
           break;
+      case 'CA03010':
+          offenceTitleDisplay.textContent = "Use a television set without a licence";
+          break;     
       case 'RT88567':
           offenceTitleDisplay.textContent = "Fail to give information relating to the identification of the driver/rider of a vehicle when required";
           break;
