--- a/app/views/create-account/check-submit.html
+++ b/app/views/create-account/check-submit.html
@@ -928,6 +928,8 @@
                 Criminal Damage to property valued under £5000.00
               {% elseif (data['Offence1_Code'] | upper) == "TH68010" %}
                 Theft from a shop
+              {% elseif (data['Offence1_Code'] | upper) == "CA03010" %}
+                Use a television set without a licence
               {% elseif (data['Offence1_Code'] | upper) == "RT88567" %}
                 Fail to give information relating to the identification of the driver/rider of a vehicle when required
               {% elseif (data['Offence1_Code'] | upper) == "CJ88116" %}
@@ -1161,6 +1163,8 @@
                 Criminal Damage to property valued under £5000.00
               {% elseif (data['Offence2_Code'] | upper) == "TH68010" %}
                 Theft from a shop
+              {% elseif (data['Offence2_Code'] | upper) == "CA03010" %}
+                Use a television set without a licence
               {% elseif (data['Offence2_Code'] | upper) == "RT88567" %}
                 Fail to give information relating to the identification of the driver/rider of a vehicle when required
               {% elseif (data['Offence2_Code'] | upper) == "CJ88116" %}
@@ -1391,6 +1395,8 @@
                 Criminal Damage to property valued under £5000.00
               {% elseif (data['Offence3_Code'] | upper) == "TH68010" %}
                 Theft from a shop
+              {% elseif (data['Offence3_Code'] | upper) == "CA03010" %}
+                Use a television set without a licence  
               {% elseif (data['Offence3_Code'] | upper) == "RT88567" %}
                 Fail to give information relating to the identification of the driver/rider of a vehicle when required
               {% elseif (data['Offence3_Code'] | upper) == "CJ88116" %}
