--- a/app/views/create-account/parent-guardian-details.html
+++ b/app/views/create-account/parent-guardian-details.html
@@ -23,11 +23,11 @@
             name: "PGFirstName",
             classes: "govuk-input--width-20",
             label: {
-              text: "First names",
+              text: "Parent or guardian first names ",
               classes: "govuk-label--s"
             },
             hint: {
-              text: "This can include their middle names"
+              text: "Include their middle names"
             },
             value: data['PGFirstName']
           }) }}
@@ -37,7 +37,7 @@
             name: "PGLastName",
             classes: "govuk-input--width-20",
             label: {
-              text: "Last name",
+              text: "Parent or guardian last name ",
               classes: "govuk-label--s"
             },
             value: data['PGLastName']
@@ -109,7 +109,7 @@
         <!-- DATE OF BIRTH -->
 
         <div class="govuk-form-group">
-          <label class="govuk-label govuk-label--s" for="date">Date of birth</label>
+          <label class="govuk-label govuk-label--s" for="date">Parent or guardian date of birth</label>
           <div id="date-hint" class="govuk-hint">
             For example, 31/01/2023
           </div>
@@ -130,7 +130,7 @@
         <div>
         {{ govukInput({
           label: {
-            text: "National Insurance number ",
+            text: "Parent or guardian National Insurance number ",
             classes: "govuk-label--s"
           },
           classes: "govuk-input--width-10 govuk-input--extra-letter-spacing",
@@ -149,7 +149,7 @@
 
         {% call govukFieldset({
           legend: {
-            text: "Address",
+            text: "Parent or guardian address",
             classes: "govuk-fieldset__legend--m"
           }
         }) %}
@@ -205,7 +205,7 @@
 
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-        <h2 class="govuk-heading-m">Vehicle details</h2>
+        <h2 class="govuk-heading-m">Parent or guardian vehicle details</h2>
 
         {{ govukInput({
           label: {
