--- a/app/views/search/search.html
+++ b/app/views/search/search.html
@@ -12,7 +12,7 @@
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">{{pageName}}</h1>
 
-    <form method="post" novalidate action="results">
+    <form method="post" novalidate >
 
     {{ govukSummaryList({
       rows: [
@@ -39,17 +39,17 @@
     
 
     {{ govukInput({
-      id: "uniqueID",
-      name: "uniqueID",
+      id: "referenceNumber",
+      name: "referenceNumber",
       classes: "govuk-input--width-10",
       label: {
-        text: "Unique ID",
+        text: "Reference number",
         classes: "govuk-label--s"
       },
       hint: {
         text: "Account number, case number or National Insurance number"
       },
-      value: data['uniqueID']
+      value: data['referenceNumber']
     }) }}
 
     {{ govukInput({
@@ -65,29 +65,76 @@
 
 
     <!-- DEFENDANT SEARCH -->
-    {% set Defendants %}
-    <h2 class="govuk-heading-m">Defendant</h2>
+    {% set individualHTML %}
+    <h2 class="govuk-heading-m">Individuals</h2>
 
-    {{ govukRadios({
-      name: "selectDefendantType",
-      fieldset: {
-        legend: {
-          text: "Select defendant type",
-          classes: "govuk-fieldset__legend--s"
-        }
+    <p class="govuk-body govuk-hint">Search for a defendant, parent or guardian</p>
+
+    {{ govukInput({
+      id: "lastName",
+      name: "lastName",
+      formGroup: {
+        classes: "govuk-!-margin-bottom-1"
       },
-      value: data['selectDefendantType'],
+      classes: "govuk-input--width-20",
+      label: {
+        text: "Last name",
+        classes: "govuk-label--s"
+      },
+      value: data['lastName']
+    }) }}
+
+    {{ govukCheckboxes({
+      name: "searchExactMatchLastName",
+      classes: "govuk-checkboxes--small",
+      values: data['searchExactMatchLastName'],
       items: [
         {
-          value: "Individual",
-          text: "Individual"
-        },
-        {
-          value: "Company",
-          text: "Company"
+          value: data['yes'],
+          text: "Search exact match"
         }
       ]
     }) }}
+
+    {{ govukInput({
+      id: "firstName",
+      name: "firstName",
+      formGroup: {
+        classes: "govuk-!-margin-bottom-1"
+      },
+      classes: "govuk-input--width-20",
+      label: {
+        text: "First name",
+        classes: "govuk-label--s"
+      },
+      value: data['firstName']
+    }) }}
+
+    {{ govukCheckboxes({
+      name: "searchExactMatchFirstName",
+      classes: "govuk-checkboxes--small",
+      values: data['searchExactMatchFirstName'],
+      items: [
+        {
+          value: data['yes'],
+          text: "Search exact match"
+        }
+      ]
+    }) }}
+
+    {{ govukCheckboxes({
+      name: "includeAliases",
+      classes: "govuk-checkboxes--small",
+      values: data['includeAliases'],
+      items: [
+        {
+          value: data['yes'],
+          text: "Include aliases"
+        }
+      ]
+    }) }}
+
+    <!-- DATE OF BIRTH -->
 
     {{ govukInput({
       id: "addressLine1",
@@ -113,37 +160,360 @@
 
     {% endset -%}
 
+    <!-- COMPANIES SEARCH -->
+    {% set companiesHTML %}
+    <h2 class="govuk-heading-m">Companies</h2>
+    
+    {{ govukInput({
+      id: "companyName",
+      name: "companyName",
+      formGroup: {
+        classes: "govuk-!-margin-bottom-1"
+      },
+      classes: "govuk-input--width-30",
+      label: {
+        text: "Company name",
+        classes: "govuk-label--s"
+      },
+      value: data['companyName']
+    }) }}
+
+    {{ govukCheckboxes({
+      name: "searchExactMatchCompanyName",
+      classes: "govuk-checkboxes--small",
+      values: data['searchExactMatchCompanyName'],
+      items: [
+        {
+          value: data['yes'],
+          text: "Search exact match"
+        }
+      ]
+    }) }}
+
+    {{ govukCheckboxes({
+      name: "includeCompanyAliases",
+      classes: "govuk-checkboxes--small",
+      values: data['includeCompanyAliases'],
+      items: [
+        {
+          value: data['yes'],
+          text: "Include aliases"
+        }
+      ]
+    }) }}
+
+    {{ govukInput({
+      id: "companyAddressLine1",
+      name: "companyAddressLine1",
+      classes: "govuk-input--width-30",
+      label: {
+        text: "Address line 1",
+        classes: "govuk-label--s"
+      },
+      value: data['companyAddressLine1']
+    }) }}
+
+    {{ govukInput({
+      id: "companyPostcode",
+      name: "companyPostcode",
+      classes: "govuk-input--width-10",
+      label: {
+        text: "Postcode",
+        classes: "govuk-label--s"
+      },
+      value: data['companyPostcode']
+    }) }}
+
+
+    {% endset -%}
+
     <!-- MINOR CREDITOR SEARCH -->
-    {% set minorCreditors %}
-    <h2 class="govuk-heading-m">Minor creditors</h2>
+    {% set minorCreditorIndividualHTML %}
+    {{ govukInput({
+      id: "MCIlastName",
+      name: "MCIlastName",
+      formGroup: {
+        classes: "govuk-!-margin-bottom-1"
+      },
+      classes: "govuk-input--width-20",
+      label: {
+        text: "Last name",
+        classes: "govuk-label--s"
+      },
+      value: data['MCIlastName']
+    }) }}
+
+    {{ govukCheckboxes({
+      name: "MCIsearchExactMatchLastName",
+      classes: "govuk-checkboxes--small",
+      values: data['MCIsearchExactMatchLastName'],
+      items: [
+        {
+          value: data['yes'],
+          text: "Search exact match"
+        }
+      ]
+    }) }}
+
+    {{ govukInput({
+      id: "MCIfirstName",
+      name: "MCIfirstName",
+      formGroup: {
+        classes: "govuk-!-margin-bottom-1"
+      },
+      classes: "govuk-input--width-20",
+      label: {
+        text: "First name",
+        classes: "govuk-label--s"
+      },
+      value: data['MCIfirstName']
+    }) }}
+
+    {{ govukCheckboxes({
+      name: "MCIsearchExactMatchFirstName",
+      classes: "govuk-checkboxes--small",
+      values: data['MCIsearchExactMatchFirstName'],
+      items: [
+        {
+          value: data['yes'],
+          text: "Search exact match"
+        }
+      ]
+    }) }}
+
+    {{ govukInput({
+      id: "MCIaddressLine1",
+      name: "MCIaddressLine1",
+      classes: "govuk-input--width-30",
+      label: {
+        text: "Address line 1",
+        classes: "govuk-label--s"
+      },
+      value: data['MCIaddressLine1']
+    }) }}
+
+    {{ govukInput({
+      id: "MCIpostcode",
+      name: "MCIpostcode",
+      classes: "govuk-input--width-10",
+      label: {
+        text: "Postcode",
+        classes: "govuk-label--s"
+      },
+      value: data['MCIpostcode']
+    }) }}
+
+    {% endset -%}
+
+    {% set minorCreditorCompanyHTML %}
+
+    {{ govukInput({
+      id: "MCcompanyName",
+      name: "MCcompanyName",
+      formGroup: {
+        classes: "govuk-!-margin-bottom-1"
+      },
+      classes: "govuk-input--width-30",
+      label: {
+        text: "Company name",
+        classes: "govuk-label--s"
+      },
+      value: data['MCcompanyName']
+    }) }}
+
+    {{ govukCheckboxes({
+      name: "MCsearchExactMatchCompanyName",
+      classes: "govuk-checkboxes--small",
+      values: data['MCsearchExactMatchCompanyName'],
+      items: [
+        {
+          value: data['yes'],
+          text: "Search exact match"
+        }
+      ]
+    }) }}
+
+    {{ govukInput({
+      id: "MCcompanyAddressLine1",
+      name: "MCcompanyAddressLine1",
+      classes: "govuk-input--width-30",
+      label: {
+        text: "Address line 1",
+        classes: "govuk-label--s"
+      },
+      value: data['MCcompanyAddressLine1']
+    }) }}
+
+    {{ govukInput({
+      id: "MCcompanyPostcode",
+      name: "MCcompanyPostcode",
+      classes: "govuk-input--width-10",
+      label: {
+        text: "Postcode",
+        classes: "govuk-label--s"
+      },
+      value: data['MCcompanyPostcode']
+    }) }}
+
+    {% endset -%}
+
+    {% set minorCreditorsHTML %}
+    {{ govukRadios({
+      name: "minor-creditor-type",
+      value: data['minor-creditor-type'],
+      fieldset: {
+        legend: {
+          text: "Minor creditors",
+          classes: "govuk-fieldset__legend--m"
+        }
+      },
+      items: [
+        {
+          value: "Individual",
+          text: "Individual",
+          conditional: {
+            html: minorCreditorIndividualHTML
+          }
+        },
+        {
+          value: "Company",
+          text: "Company",
+          conditional: {
+            html: minorCreditorCompanyHTML
+          }
+        }
+      ]
+    }) }}
     {% endset -%}
 
     <!-- MAJOR CREDITOR SEARCH -->
-    {% set majorCreditors %}
-    <h2 class="govuk-heading-m">Major creditors</h2>
+    {% set majorCreditorsHTML %}
+    {{ xGovukAutocomplete({
+      formGroup: {
+        classes: "govuk-input--width-30"
+      },
+      id: "Offence1_Imposition3_Major_Creditor_Name",
+      name: "Offence1_Imposition3_Major_Creditor_Name",
+      value: data['Offence1_Imposition3_Major_Creditor_Name'],
+      allowEmpty: false,
+      displayMenu: "overlay",
+      label: {
+        classes: "govuk-label--m",
+        text: "Major creditors"
+      },
+      hint: {
+        text: "Search using creditor name or code"
+      },  
+      items: [
+      { text: "Abellio Greater Anglia Ltd (AGAL)" },
+      { text: "Aldi (ALDI)" },
+      { text: "Anglia Trains (ANGL)" },
+      { text: "Asda (ASDA)" },
+      { text: "Bedford Borough Council (BEDB)" },
+      { text: "B & Q Stores (BNQL)" },
+      { text: "Boots (BOOT)" },
+      { text: "British Transport Police (BTPO)" },
+      { text: "Cambridge City Council (CAMC)" },
+      { text: "Charles & Ashby Revenue Ltd (CARV)" },
+      { text: "Cambs County Council Education (CBC1)" },
+      { text: "Cambridgeshire County Council. (CBCC)" },
+      { text: "Central Trains (CENT)" },
+      { text: "City of London Police (COLP)" },
+      { text: "Co-Operative Group (COP2)" },
+      { text: "Crown Prosecution Service (CPS)" },
+      { text: "DVLA (DVL2)" },
+      { text: "DVSA (DVSA)" },
+      { text: "DWP DM (DWP1)" },
+      { text: "East Cambs. District Council (ECDC)" },
+      { text: "Abellio East Midlands Ltd (EMT1)" },
+      { text: "Fenland District Council (FDC)" },
+      { text: "Govia Thameslink Railway Ltd (GTLR)" },
+      { text: "HMCTS (HMCS)" },
+      { text: "HM Revenue and Customs (HMRC)" },
+      { text: "Huntingdon District Council (HUDC)" },
+      { text: "Iceland Stores (ICE1)" },
+      { text: "Insolvency Service (INSS)" },
+      { text: "John Lewis Stores (JLEW)" },
+      { text: "PCC for Devon & Cornwall (PO50)" },
+      { text: "Lidl Stores (LIDL)" },
+      { text: "London North Eastern Railway (LNER)" },
+      { text: "Merseyrail Electrics 2002 Ltd (METV)" },
+      { text: "Morrisons (MORR)" },
+      { text: "Marks and Spencer (MSP)" },
+      { text: "Next (NEXT)" },
+      { text: "NOMS (NOMS)" },
+      { text: "Environment Agency (NRA1)" },
+      { text: "Peterborough City Council (PCTC)" },
+      { text: "Poundland (PLD)" },
+      { text: "Metropolitan Police (PO01)" },
+      { text: "PCC for Merseyside (PO05)" },
+      { text: "PCC for North Yorkshire (PO12)" },
+      { text: "PCC for West Midlands (PO20)" },
+      { text: "PCC for Staffordshire (PO21)" },
+      { text: "PCC for Derbyshire (PO30)" },
+      { text: "PCC for Lincolnshire (PO32)" },
+      { text: "PCC for Leicestershire (PO33)" },
+      { text: "PCC for Northamptonshire (PO34)" },
+      { text: "PCC for Cambridgeshire (PO35)" },
+      { text: "PCC for Norfolk (PO36)" },
+      { text: "PCC for Suffolk (PO37)" },
+      { text: "PCC for Bedfordshire (PO40)" },
+      { text: "PCC for Hertfordshire (PO41)" },
+      { text: "PCC for Essex (PO42)" },
+      { text: "PCC for Thames Valley (PO43)" },
+      { text: "PCC for Hampshire (PO44)" },
+      { text: "PCC for Surrey (PO45)" },
+      { text: "PCC for Kent (PO46)" },
+      { text: "Sussex Police (PO47)" },
+      { text: "PCC for Avon & Somerset (PO52)" },
+      { text: "PCC for Wiltshire (PO54)" },
+      { text: "PCC for North Wales (PO60)" },
+      { text: "PCC for South Wales (PO62)" },
+      { text: "PCC for Dyfed Powys (PO63)" },
+      { text: "RSPCA (RSPC)" },
+      { text: "Sainsbury's (SAIN)" },
+      { text: "South Cambridge D C (SCDC)" },
+      { text: "Superdrug (SDRG)" },
+      { text: "Tesco (TESC)" },
+      { text: "Transport for London (TFL2)" },
+      { text: "TK Maxx (TKMX)" },
+      { text: "Transport Investigations Ltd (TRAN)" },
+      { text: "Capital Business Services Ltd (TVL3)" },
+      { text: "National Express Trains LTD (WAGN)" },
+      { text: "Wilkinson Stores (WILK)" },
+      { text: "Waitrose (WTRO)" }
+      ]
+    }) }}
     {% endset -%}
 
     {{ govukTabs({
       items: [
         {
-          label: "Defendant",
-          id: "defendant",
+          label: "Individuals",
+          id: "individuals",
           panel: {
-            html: Defendants
+            html: individualHTML
+          }
+        },
+        {
+          label: "Companies",
+          id: "companies",
+          panel: {
+            html: companiesHTML
           }
         },
         {
           label: "Minor creditors",
-          id: "minor-creditor",
+          id: "minor-creditors",
           panel: {
-            html: minorCreditors
+            html: minorCreditorsHTML
           }
         },
         {
           label: "Major creditors",
-          id: "major-creditor",
+          id: "major-creditors",
           panel: {
-            html: majorCreditors
+            html: majorCreditorsHTML
           }
         }
       ]
@@ -161,9 +531,15 @@
       ]
     }) }}
 
-    {{ govukButton({
-      text: "Search"
-    }) }}
+    <div class="govuk-button-group">
+      {{ govukButton({
+        text: "Search"
+      }) }}
+    
+      <a class="govuk-link govuk-link--no-visited-state" id="clear-storage-link" href="/clear-search">Clear search</a>
+    </div>
+
+    
     </form>
 
     
@@ -172,6 +548,13 @@
 
   </div>
 </div>
+
+<script>
+  document.getElementById('clear-storage-link').addEventListener('click', function(event) {
+    window.localStorage.clear();
+    window.sessionStorage.clear();
+  });
+</script>
 
 
 {% endblock %}
