FP account details done

--- a/app/views/create-account/create-account.html
+++ b/app/views/create-account/create-account.html
@@ -87,12 +87,12 @@
             }
           },
           hint: {
-            text: "If sole trader, choose 'Adult or youth only'"
+            text: "If sole trader, choose 'Adult or youth'"
           },
           items: [
             {
-              value: "Adult or youth only",
-              text: "Adult or youth only"
+              value: "Adult or youth",
+              text: "Adult or youth"
             },
             {
               value: "Company",
@@ -132,7 +132,7 @@
             },
             {
               value: "Conditional Caution",
-              text: "Conditional Caution (adult or youth only)"
+              text: "Conditional Caution (adult or youth)"
             }
           ]
         }) }}
