--- a/app/views/layouts/global.html
+++ b/app/views/layouts/global.html
@@ -6,6 +6,18 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
 {% extends "govuk-prototype-kit/layouts/govuk-branded.njk" %}
 
 {% block header %}
+<div class="govuk-!-padding-top-2 govuk-!-padding-bottom-3" style="background-color: #ffdd00; width: 100%;" >
+  <div class="govuk-width-container">
+   
+   <p class="govuk-body govuk-!-margin-bottom-0">
+    <strong class="govuk-tag govuk-!-margin-right-1" style="background-color: #505A5F; color: white;">
+      Research tool
+    </strong>
+     For research purposes only. Some functions will not be available. 
+    </p>
+  </div>
+</div>
+
 {{ mojHeader({
     navigationClasses: 'govuk-width-container',
     organisationLabel: {
