--- a/app/assets/sass/settings.scss
+++ b/app/assets/sass/settings.scss
@@ -13,6 +13,6 @@ $govuk-page-width: 1280px;
 //     max-width: 1280px;
 // }
 
-body {
-    border: 10px solid #ffdd00;
-}
+// body {
+//     border: 10px solid #ffdd00;
+// }
