--- a/app/views/create-account/fixed-penalty/fixed-penalty-details.html
+++ b/app/views/create-account/fixed-penalty/fixed-penalty-details.html
@@ -881,7 +881,7 @@
               classes: "govuk-label--s"
             },
             hint: {
-              text: "For example, 02:30 or 14:30"
+              text: "For example, 02:30 or 14:30 and midnight is 00:00"
             },
             classes: "govuk-input--width-4",
             id: "timeOffence",
