--- a/app/views/create-account/inputter/rejected.html
+++ b/app/views/create-account/inputter/rejected.html
@@ -4,7 +4,7 @@
 
 {% block beforeContent %}
 
-<a href="../index.html" class="govuk-back-link">Back</a>
+<!-- <a href="../index.html" class="govuk-back-link">Back</a> -->
 
 {% endblock %}
 
@@ -16,10 +16,10 @@
       
       <h1 class="govuk-heading-l">{{pageName}}</h1>
 
-      {{ govukButton({
+      <!-- {{ govukButton({
         text: "Create account",
         href: "../create-account.html"
-      }) }}
+      }) }} -->
 
       <nav class="moj-sub-navigation" aria-label="Sub navigation">
 
