--- a/app/views/create-account/fixed-penalty/check-account-details.html
+++ b/app/views/create-account/fixed-penalty/check-account-details.html
@@ -62,30 +62,6 @@
               {{data['defendantTypeFP']}}
             </dd>
           </div>
-          {% if data['businessUnit'] == "South Wales" %}
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Document language
-            </dt>
-            <dd class="govuk-summary-list__value">
-              {{"English only" if data['doc umentLanguage'] == 'English' else "Welsh and English"}}
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link govuk-link--no-visited-state" href="./language-preference.html">Change<span class="govuk-visually-hidden"> document language</span></a>
-            </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Court hearing language
-            </dt>
-            <dd class="govuk-summary-list__value">
-              {{"English only" if data['courtHearingLanguage'] == 'English' else "Welsh and English"}}
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link govuk-link--no-visited-state" href="./language-preference.html">Change<span class="govuk-visually-hidden"> document language</span></a>
-            </dd>
-          </div>
-          {% endif %}
         </dl>
       </div>
     </div>
@@ -247,6 +223,185 @@
     </div>
 
     {% endif %}
+
+    <div class="govuk-summary-card">
+      <div class="govuk-summary-card__title-wrapper">
+        <h2 class="govuk-summary-card__title">
+          Offence details
+        </h2>
+        <ul class="govuk-summary-card__actions">
+          <li class="govuk-summary-card__action">
+            <a class="govuk-link govuk-link--no-visited-state" href="./fixed-penalty-details.html">Change<span class="govuk-visually-hidden"> account comments and notes</span></a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="govuk-summary-card__content">
+        <dl class="govuk-summary-list">
+          <div class="govuk-summary-list__row" >
+            <dt class="govuk-summary-list__key">
+              Notice number
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ data['noticeNumber'] or "Not provided" }}
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row" >
+            <dt class="govuk-summary-list__key">
+              Offence type
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ data['offenceType']}}
+            </dd>
+          </div>
+
+          {% if data['offenceType'] == "Vehicle" %}
+
+          <div class="govuk-summary-list__row" >
+            <dt class="govuk-summary-list__key">
+              Registration number
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ data['carRegistration'] | upper }}
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row" >
+            <dt class="govuk-summary-list__key">
+              Driving licence number
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ data['drivingLicence'] | upper }}
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row" >
+            <dt class="govuk-summary-list__key">
+              Notice to owner or hirer number (NTO/NTH)
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ data['noticeToOwner']}}
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row" >
+            <dt class="govuk-summary-list__key">
+              Date notice to owner was issued
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ data['dateIssued'] | formatDate | govukDate or "Not provided" }}
+            </dd>
+          </div>
+
+          {% endif %}
+
+          <div class="govuk-summary-list__row" >
+            <dt class="govuk-summary-list__key">
+              Date of offence
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ data['dateOffence']| formatDate | govukDate or "Not provided"}}
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row" >
+            <dt class="govuk-summary-list__key">
+              Offence code
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ data['Offence1_Code'] | upper }}
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row" >
+            <dt class="govuk-summary-list__key">
+              Time of offence
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ data['timeOffence'] | govukTime }}
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row" >
+            <dt class="govuk-summary-list__key">
+              Place of offence
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ data['placeOffence']}}
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row" >
+            <dt class="govuk-summary-list__key">
+              Amount imposed
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ data['amountImposed'] | currency }}
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row"  id="conditional-collo">
+            <dt class="govuk-summary-list__key">
+              Has a collection order been made?
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ data['collectionOrder'] }}
+            </dd>
+          </div>
+
+          {% if data['collectionOrder'] == "Yes" %}
+          <div class="govuk-summary-list__row"  id="conditional-collo-2">
+            <dt class="govuk-summary-list__key">
+              Date of collection order
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ data['collection-order-date'] | formatDate | govukDate or "Not provided"  }}
+            </dd>
+          </div>
+          {% endif %}
+
+        </dl>
+
+      </div>
+    </div>  
+
+    <div class="govuk-summary-card">
+      <div class="govuk-summary-card__title-wrapper">
+        <h2 class="govuk-summary-card__title">
+          Account comment and notes
+        </h2>
+        <ul class="govuk-summary-card__actions">
+          <li class="govuk-summary-card__action">
+            <a class="govuk-link govuk-link--no-visited-state" href="./fixed-penalty-details.html">Change<span class="govuk-visually-hidden"> account comments and notes</span></a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="govuk-summary-card__content">
+        <dl class="govuk-summary-list">
+          <div class="govuk-summary-list__row" >
+            <dt class="govuk-summary-list__key">
+              Comment
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ data['accountComment'] or "Not provided" }}
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row" >
+            <dt class="govuk-summary-list__key">
+              Account note
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ data['accountNote'] or "Not provided" }}
+            </dd>
+          </div>
+
+        </dl>
+
+      </div>
+    </div>  
 
     {{ govukButton({
       text: "Submit for review",
