--- a/app/views/create-account/fixed-penalty/fixed-penalty-details.html
+++ b/app/views/create-account/fixed-penalty/fixed-penalty-details.html
@@ -609,7 +609,7 @@
               classes: "govuk-label--s"
             },
             hint: {
-              text: "This can include their middle names"
+              text: "Include their middle names"
             },
             value: data['firstName']
           }) }}
