--- a/app/views/create-account/inputter/in-review.html
+++ b/app/views/create-account/inputter/in-review.html
@@ -4,7 +4,7 @@
 
 {% block beforeContent %}
 
-<a href="../index.html" class="govuk-back-link">Back</a>
+<!-- <a href="../index.html" class="govuk-back-link">Back</a> -->
 
 {% endblock %}
 
@@ -15,10 +15,10 @@
 
       <h1 class="govuk-heading-l">{{pageName}}</h1>
 
-      {{ govukButton({
+      <!-- {{ govukButton({
         text: "Create account",
         href: "../create-account.html"
-      }) }}
+      }) }} -->
 
       <nav class="moj-sub-navigation" aria-label="Sub navigation">
 
@@ -31,7 +31,7 @@
       
           <li class="moj-sub-navigation__item" style="display: ruby;">
             <a class="moj-sub-navigation__link" href="rejected.html">Rejected</a>
-            <span id="notifications" class=" govuk-!-margin-left-1 moj-notification-badge">1</span>   
+            <span id="notifications" class="govuk-!-margin-left-1 moj-notification-badge">1</span>   
           </li>
 
           <li class="moj-sub-navigation__item">
@@ -55,11 +55,11 @@
       
             <th scope="col" class="govuk-table__header" style="width: 25%;" aria-sort="none">Defendant</th>
 
-            <th scope="col" class="govuk-table__header" style="width: 25%;" aria-sort="none">Date of birth</th>
+            <th scope="col" class="govuk-table__header" style="width: 15%;" aria-sort="none">Date of birth</th>
             
-            <th scope="col" class="govuk-table__header" style="width: 25%;" aria-sort="none">Created</th>
+            <th scope="col" class="govuk-table__header" style="width: 15%;" aria-sort="none">Created</th>
 
-            <!-- <th scope="col" class="govuk-table__header" style="width: 20%;" aria-sort="none">Account type</th> -->
+            <th scope="col" class="govuk-table__header" style="width: 20%;" aria-sort="none">Account type</th>
 
             <th scope="col" class="govuk-table__header" style="width: 25%;" aria-sort="none">Business unit</th>
 
@@ -78,7 +78,7 @@
             
             <td class="govuk-table__cell">Today</td>
 
-            <!-- <td class="govuk-table__cell">Fine</td> -->
+            <td class="govuk-table__cell">Fixed Penalty</td>
 
             <td class="govuk-table__cell">Cambridgeshire</td>
 
@@ -92,7 +92,7 @@
       
             <td class="govuk-table__cell">1 day ago</td>
 
-            <!-- <td class="govuk-table__cell">Fine</td> -->
+            <td class="govuk-table__cell">Fixed Penalty</td>
 
             <td class="govuk-table__cell">Cambridgeshire</td>
 
@@ -107,7 +107,7 @@
       
             <td class="govuk-table__cell">1 day ago</td>
             
-            <!-- <td class="govuk-table__cell">Fine</td> -->
+            <td class="govuk-table__cell">Fine</td>
       
             <td class="govuk-table__cell">Avon and Somerset</td>
 
@@ -122,7 +122,7 @@
 
             <td class="govuk-table__cell">1 day ago</td>
 
-            <!-- <td class="govuk-table__cell">Fine</td> -->
+            <td class="govuk-table__cell">Fine</td>
       
             <td class="govuk-table__cell">Avon and Somerset</td>
 
